# Voicebank2DiffSinger

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
src/: g2p.py  main.py  utils.py
